kubernetes/k3s-01/workloads/qbittorrent/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
  namespace: torrenting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: docker.io/linuxserver/qbittorrent:5.2.4@sha256:b522f9f4b769f8f36d49d22d5eb6a92e9aa18904c6a1830b1439df511ec21983
          startupProbe:
            httpGet:
              path: /
              port: 8080
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: qbittorrent
              mountPath: /config
            - name: qbittorrent-downloads
              mountPath: /downloads
      volumes:
        - name: qbittorrent
          persistentVolumeClaim:
            claimName: qbittorrent
        - name: qbittorrent-downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
