kubernetes/k3s-01/workloads/qbittorrent/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: torrenting
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: qbittorrent
