kubernetes/k3s-01/workloads/qbittorrent/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: torrenting
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.47fc5c.com`)
      kind: Rule
      services:
        - name: qbittorrent
          kind: Service
          port: 8080
          scheme: http
  tls:
    secretName: qbittorrent-certificate
