kubernetes/k3s-01/workloads/qbittorrent/network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qbittorrent
  namespace: torrenting
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app: qbittorrent
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            app.kubernetes.io/name: traefik
      - podSelector:
          matchLabels:
            app: lidarr
      - podSelector:
          matchLabels:
            app: radarr
      - podSelector:
          matchLabels:
            app: readarr
      - podSelector:
          matchLabels:
            app: sonarr
      ports:
        - protocol: TCP
          port: 8080
